# League-Custom-Game-Helper

./: .gitignore  App.axaml  App.axaml.cs  LoL Custom Game Heper by David Demon.sln  LoLCustomGameHelper.csproj  Program.cs  QUICK-START.md  README.md  Start_LoL_Helper.bat  Start_LoL_Helper.sh  app.manifest  deploy-guide.sh  package-lock.json  package.json  railway.yaml  render.yaml  simple-start.sh  start-app.sh  start-simple.sh  vercel.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  desktop.yml
Assets/: create_ico.sh
Models/: Champion.cs  GameSettings.cs  Match.cs  Player.cs
Services/: AudioService.cs  DatabaseService.cs  GameService.cs
Styles/: LoLStyles.axaml
ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs  WheelViewModel.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs  WheelView.axaml  WheelView.axaml.cs
backend/: drizzle.config.ts  package.json  tsconfig.json  vercel.json
backend/api/: index.ts
backend/drizzle/: 0000_fantastic_sleeper.sql  0001_white_sage.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
backend/src/: index.ts
backend/src/db/: index.ts  schema.ts  service.ts
backend/src/routes/: games.ts  match-history.ts  matches.ts  players.ts
frontend/: next.config.js  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/app/: 500.tsx  globals.css  layout.tsx  not-found.tsx  (+1 more)
publish/final-version/: start.sh
(+35 files in other folders)
