[package]
name = "lol-custom-game-helper"
version = "2.0.0"
description = "LoL Custom Game Helper - 5v5 team randomizer"
authors = ["David Demon"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
